src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AFR_Installed_Year2__c</fullName>
        <label>AFR Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFR_Installed_Year__c</fullName>
        <label>AFR Installed Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFR_Vendor__c</fullName>
        <label>AFR Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFR_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AFR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Service_Type__c</fullName>
        <label>Account Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Multi-Agency</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>PSAP</fullName>
                </value>
                <value>
                    <fullName>Sheriff</fullName>
                </value>
                <value>
                    <fullName>University Police</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Act_On_Lead_Score__c</fullName>
        <label>Act On Lead Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Prospect/Lead</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <label>Agency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Fire/EMS</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Multi-Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>PSAP</fullName>
                </value>
                <value>
                    <fullName>Sheriff</fullName>
                </value>
                <value>
                    <fullName>University Police</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Served_Sq_Miles__c</fullName>
        <label>Area Served (Sq. Miles)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Vendor__c</fullName>
        <label>Billing Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAD_Dispatcher_Call_Taker_Seats__c</fullName>
        <label>CAD Dispatcher/Call Taker Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Install_Date__c</fullName>
        <label>CAD Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAD_Installed_Year__c</fullName>
        <label>CAD Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAD_Vendor__c</fullName>
        <label>CAD Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAD_to_CAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD-to-CAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Volume_Annual__c</fullName>
        <label>Call Volume (Annual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career_Fire_EMS__c</fullName>
        <label>Career Fire EMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Civil_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Civil Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comm_Center2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comm Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comm_Center__c</fullName>
        <label>Comm Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Agency_Data_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Agency Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Vendor__c</fullName>
        <label>Current Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMS Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_CAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMS CAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_ePCR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMS ePCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Purchase__c</fullName>
        <label>Expected Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_RMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire RMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Purchase__c</fullName>
        <label>Forecast Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>4-6 months</fullName>
                </value>
                <value>
                    <fullName>7-8 months</fullName>
                </value>
                <value>
                    <fullName>9-12 months</fullName>
                </value>
                <value>
                    <fullName>&gt; 12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_AFR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AFR Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMC_Products__c</fullName>
        <label>IMC Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>CAD-Calls for Service</fullName>
                </value>
                <value>
                    <fullName>CAD-Full Dispatch</fullName>
                </value>
                <value>
                    <fullName>Civil Process</fullName>
                </value>
                <value>
                    <fullName>Cross Agency Data Sharing</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Fire Dispatch</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>IMC Mobile Switch</fullName>
                </value>
                <value>
                    <fullName>IMC State Interface</fullName>
                </value>
                <value>
                    <fullName>IMC Wireless Client</fullName>
                </value>
                <value>
                    <fullName>Investigative</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Pervasive</fullName>
                </value>
                <value>
                    <fullName>Police Records</fullName>
                </value>
                <value>
                    <fullName>Quest Contact Manager</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Volume__c</fullName>
        <inlineHelpText>Monthly</inlineHelpText>
        <label>Incident Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jail_Beds__c</fullName>
        <label>Jail Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Law_Civilian_Personnel__c</fullName>
        <label>Law - Civilian Personnel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Law_RMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law RMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Details__c</fullName>
        <description>Syncs from ActOn hidden field called &quot;Lead Details&quot;</description>
        <inlineHelpText>Syncs from ActOn hidden field called &quot;Lead Details&quot;</inlineHelpText>
        <label>Lead Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Form_Campaign_Name__c</fullName>
        <description>Used in automated lead assignments</description>
        <inlineHelpText>Syncs from a lead form with the text of the campaign name</inlineHelpText>
        <label>Lead Form Campaign Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Tier__c</fullName>
        <label>Market Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Install_Date__c</fullName>
        <label>Mobile Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_Installed_Year__c</fullName>
        <label>Mobile Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Units__c</fullName>
        <label>Mobile Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Vendor__c</fullName>
        <label>Mobile Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Personnel__c</fullName>
        <label>Number of Sworn Personnel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Company_Client_Product_News__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Company, Client &amp; Product News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Technical_and_Product_Bulletins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Technical &amp; Product Bulletins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Tradeshows_and_Demos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Tradeshows and Demos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Training_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Training Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Budget__c</fullName>
        <label>Original Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Individual_Contacts__c</fullName>
        <label>Other Individual Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId 

&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,2,0)
    +IF(FIND(MID(OwnerId,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID (OwnerId,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF (FIND(MID(OwnerId,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,1,0)
    +IF(FIND(MID(OwnerId,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID (OwnerId,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF (FIND(MID(OwnerId,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(OwnerId,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,16,0)
    )+1,1)
&amp; MID (&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID (OwnerId,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(OwnerId,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,4,0)
    +IF(FIND(MID(OwnerId,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID (OwnerId,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_of_Area_Served__c</fullName>
        <label>Population of Area Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_s_of_Interest__c</fullName>
        <label>Product(s) of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>FBR</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>IQ/Analytics</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>TotalCommand</fullName>
                </value>
                <value>
                    <fullName>Total Enforcement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Install_Date__c</fullName>
        <label>RMS Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Installed_Year__c</fullName>
        <label>RMS Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Users__c</fullName>
        <label>RMS Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_Vendor__c</fullName>
        <label>RMS Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Portal_Access__c</fullName>
        <label>Reason for Portal Access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized User</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Customer Staff</fullName>
                </value>
                <value>
                    <fullName>Director/Chief/Owner</fullName>
                </value>
                <value>
                    <fullName>GIS Contact</fullName>
                </value>
                <value>
                    <fullName>IT Contact</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Contact</fullName>
                </value>
                <value>
                    <fullName>Upgrade Contact</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Billing Services</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Federal/Military</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Partner/Vendor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSS_Products__c</fullName>
        <label>TSS Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD – Add-On</fullName>
                </value>
                <value>
                    <fullName>CAD – Add-On &amp; Interface</fullName>
                </value>
                <value>
                    <fullName>CAD – Fire/Law/RMS/Mobile</fullName>
                </value>
                <value>
                    <fullName>CAD – Fire/RMS</fullName>
                </value>
                <value>
                    <fullName>CAD – Fire/RMS/Mobile</fullName>
                </value>
                <value>
                    <fullName>CAD - Law</fullName>
                </value>
                <value>
                    <fullName>CAD – Law/RMS</fullName>
                </value>
                <value>
                    <fullName>CAD – Law/RMS/Mobile</fullName>
                </value>
                <value>
                    <fullName>CAD – Mobile</fullName>
                </value>
                <value>
                    <fullName>CAD – Modification</fullName>
                </value>
                <value>
                    <fullName>CAD – Refresh</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Regional Training Seminar</fullName>
                </value>
                <value>
                    <fullName>Services Add-On</fullName>
                </value>
                <value>
                    <fullName>Stratus</fullName>
                </value>
                <value>
                    <fullName>Stratus Upgrade</fullName>
                </value>
                <value>
                    <fullName>Technology Refresh</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>VisiNet Mobile</fullName>
                </value>
                <value>
                    <fullName>VisiNet Law/RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fire_EMS__c</fullName>
        <label>Total Fire EMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sworn_Officers__c</fullName>
        <label>Total Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Show__c</fullName>
        <label>Trade Show</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>APCO</fullName>
                </value>
                <value>
                    <fullName>APCO Atlantic Chapter</fullName>
                </value>
                <value>
                    <fullName>AR APCO/NENA</fullName>
                </value>
                <value>
                    <fullName>AZ APCO/NENA</fullName>
                </value>
                <value>
                    <fullName>Cal NENA</fullName>
                </value>
                <value>
                    <fullName>Canada APCO</fullName>
                </value>
                <value>
                    <fullName>CO APCO</fullName>
                </value>
                <value>
                    <fullName>CPCA</fullName>
                </value>
                <value>
                    <fullName>CT Chiefs of Police</fullName>
                </value>
                <value>
                    <fullName>EMS Expo</fullName>
                </value>
                <value>
                    <fullName>EMS Today</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>IACP</fullName>
                </value>
                <value>
                    <fullName>ICC</fullName>
                </value>
                <value>
                    <fullName>LEIM</fullName>
                </value>
                <value>
                    <fullName>MA (Western) Chiefs of Police</fullName>
                </value>
                <value>
                    <fullName>ME Chiefs of Police Assoc</fullName>
                </value>
                <value>
                    <fullName>Metro Fire Chiefs</fullName>
                </value>
                <value>
                    <fullName>Navigator</fullName>
                </value>
                <value>
                    <fullName>NEACOP</fullName>
                </value>
                <value>
                    <fullName>NECUSA</fullName>
                </value>
                <value>
                    <fullName>NENA</fullName>
                </value>
                <value>
                    <fullName>New England Assoc of Fire Chiefs</fullName>
                </value>
                <value>
                    <fullName>NHEDA</fullName>
                </value>
                <value>
                    <fullName>NOBLE</fullName>
                </value>
                <value>
                    <fullName>NYSACOP</fullName>
                </value>
                <value>
                    <fullName>OH APCO/NENA</fullName>
                </value>
                <value>
                    <fullName>OH - Chiefs of Police</fullName>
                </value>
                <value>
                    <fullName>OH Law Enforcement Expo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tritech_EMS_Products__c</fullName>
        <label>Tritech EMS Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMS Billing</fullName>
                </value>
                <value>
                    <fullName>EMS ePCR</fullName>
                </value>
                <value>
                    <fullName>EMS CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Fire_EMS__c</fullName>
        <label>Volunteer Fire EMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ePCR_Installed_Year2__c</fullName>
        <label>ePCR Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePCR_Installed_Year__c</fullName>
        <label>ePCR Installed Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ePCR_Vendor__c</fullName>
        <label>ePCR Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>APCO_Leads2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>APCO Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Sales_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Converted_TriCON_2017_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>Converted TriCON 2017 Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>